# dynamic_cloud_removal_lidar

./: CMakeLists.txt  README.md
config/: dynablox_default.yaml  evaluation_example.yaml
docs/: DESIGN.md  DYNABLOX_STANDALONE_PROGRESS.md
evaluation_tool/: CMakeLists.txt
evaluation_tool/include/viewer/: pangolin_viewer.h
evaluation_tool/src/: dynablox_runner.cpp  gt_viewer.cpp  main.cpp  pangolin_viewer.cpp
method/dynablox_standalone/: CMakeLists.txt
method/dynablox_standalone/include/dynablox/: clustering.h  config.h  ever_free_integrator.h  motion_detector.h  neighborhood_search.h  types.h
method/dynablox_standalone/src/: clustering.cpp  ever_free_integrator.cpp  motion_detector.cpp
scripts/: extract_bag.py
util/: CMakeLists.txt
util/include/util/: io.h  kdtree.h  point_cloud.h
util/src/: io.cpp  point_cloud.cpp
